--- a/static/common/css/base.scss
+++ b/static/common/css/base.scss
@@ -531,3 +531,8 @@ background: linear-gradient(90deg, #01BB74 0%, #01BB74 100%);
 	width: 100%;
 }
 
+.ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
