首页样式精细调整，部分bug修改

--- a/static/common/css/base.scss
+++ b/static/common/css/base.scss
@@ -18,7 +18,7 @@ view,image,text {box-sizing: border-box;flex-shrink: 0;}
 #app {width: 100vw;height: 100vh;}
 .ft-blue{color: #3C8EFB;}
 .ft-red{color: #d80d18;}
-.ft-green{color: #0FB076;}
+.ft-green{color: #01BB74;}
 .ft-orange{color: #FF9417;}
 .ft-yellow{color: rgb(248, 177, 44);}
 .ft-white{color: #fff;}
