--- a/uni_modules/uview-plus/theme.scss
+++ b/uni_modules/uview-plus/theme.scss
@@ -6,7 +6,7 @@ $u-main-color: #303133;
 $u-content-color: #606266;
 $u-tips-color: #909193;
 $u-light-color: #c0c4cc;
-$u-border-color: #dadbde;
+$u-border-color: #F4F4F4;
 $u-bg-color: #f3f4f6;
 $u-disabled-color: #c8c9cc;
 
