页面完善bug修改

--- a/static/common/css/base.scss
+++ b/static/common/css/base.scss
@@ -1031,6 +1031,7 @@ text {
 	z-index: 1;
 	font-size: 28rpx;
 	border-radius: 100rpx;
+	border: 1px solid #bb9063;
 	&::after {
 		color: #bb9063;
 		content: '';
