--- a/static/common/css/base.scss
+++ b/static/common/css/base.scss
@@ -29,7 +29,7 @@ text {
 	background: transparent !important;
 }
 // ::v-deep button::after {
-// 	border: none !important;
+// 	border: none !important;//按钮外边框border隐藏
 // }
 .ft-blue {
 	color: #3c8efb;
