--- a/static/common/css/base.scss
+++ b/static/common/css/base.scss
@@ -82,6 +82,15 @@ text {
 .bg-green {
 	background: #e2f3e5;
 }
+.bg-orange1 {
+	background: #f7a944;
+}
+.bg-blue {
+	background: #418aff;
+}
+.bg-green1 {
+	background: #01bb74;
+}
 .ft-bold {
 	font-weight: bold;
 }
@@ -731,7 +740,7 @@ text {
 	padding-left: 20rpx;
 }
 .pl24 {
-	padding-left: 24px;
+	padding-left: 24rpx;
 }
 .pl30 {
 	padding-left: 30rpx;
