up-button部分替换，开付款单图片上传完善

--- a/uni_modules/wot-design-uni/components/wd-button/index.scss
+++ b/uni_modules/wot-design-uni/components/wd-button/index.scss
@@ -112,7 +112,8 @@
   @include when(loading) {}
 
   @include when(primary) {
-    background: $-button-primary-bg-color;
+    // background: $-button-primary-bg-color;
+    background: #01BB74;
     color: $-button-primary-color;
   }
 
