按钮替换完成，样式修改

--- a/uni_modules/wot-design-uni/components/wd-cell/index.scss
+++ b/uni_modules/wot-design-uni/components/wd-cell/index.scss
@@ -82,6 +82,7 @@
     flex: 1;
     display: flex;
     text-align: left;
+	align-items: center;
     font-size: $-cell-title-fs;
     box-sizing: border-box;
     margin-right: $-cell-padding;
