--- a/static/common/css/base.scss
+++ b/static/common/css/base.scss
@@ -1415,7 +1415,7 @@ text {
  * ========================= */
 
 .yrd {
-	font-family: 'ysdzt', Arial, sans-serif;
+	font-family: '杨任东竹石体', Arial, sans-serif;
 	font-style: normal;
 	font-size: 17px;
 	width: 270px;
@@ -1426,7 +1426,7 @@ text {
 	width: 260px;
 }
 .syst {
-	font-family: 'syst', Arial, sans-serif;
+	font-family: '思源宋体', Arial, sans-serif;
 }
 
 .xqcss {
