--- a/static/common/css/obj.css
+++ b/static/common/css/obj.css
@@ -23,7 +23,7 @@
 }
 
 .yrd {
-	font-family: '杨任东竹石体', Arial, sans-serif;
+	font-family: 'YRDZS-Semibold', Arial, sans-serif;
 	font-style: normal;
 	font-size: 17px;
 	width: 270px;
@@ -36,7 +36,7 @@
 }
 
 .syst {
-	font-family: '思源宋体', Arial, sans-serif;
+	font-family: 'SYST-font', Arial, sans-serif;
 }
 
 .xqcss {
