--- a/uni_modules/albb-icon/components/albb-icon/iconfont.css
+++ b/uni_modules/albb-icon/components/albb-icon/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4981937 */
-  src: url('iconfont.woff2?t=1762155217392') format('woff2'),
-       url('iconfont.woff?t=1762155217392') format('woff'),
-       url('iconfont.ttf?t=1762155217392') format('truetype');
+  src: url('iconfont.woff2?t=1762414148522') format('woff2'),
+       url('iconfont.woff?t=1762414148522') format('woff'),
+       url('iconfont.ttf?t=1762414148522') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,46 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.ydj-tiaojianshaixuan2:before {
+  content: "\e611";
+}
+
+.ydj-tiaojianshaixuanfan2:before {
+  content: "\e612";
+}
+
+.ydj-dingdanliebiao21:before {
+  content: "\e610";
+}
+
+.ydj-dingdanliebiao2:before {
+  content: "\e60f";
+}
+
+.ydj-erweimashouji:before {
+  content: "\e60e";
+}
+
+.ydj-bianji:before {
+  content: "\e60d";
+}
+
+.ydj-saoyisao:before {
+  content: "\e609";
+}
+
+.ydj-shanchu:before {
+  content: "\e60b";
+}
+
+.ydj-chakan:before {
+  content: "\e60c";
+}
+
+.ydj-shoujihao:before {
+  content: "\e607";
 }
 
 .ydj-weixin:before {
