--- a/uni_modules/albb-icon/components/albb-icon/iconfont.css
+++ b/uni_modules/albb-icon/components/albb-icon/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4981937 */
-  src: url('iconfont.woff2?t=1762414148522') format('woff2'),
-       url('iconfont.woff?t=1762414148522') format('woff'),
-       url('iconfont.ttf?t=1762414148522') format('truetype');
+  src: url('iconfont.woff2?t=1764748051459') format('woff2'),
+       url('iconfont.woff?t=1764748051459') format('woff'),
+       url('iconfont.ttf?t=1764748051459') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.ydj-add:before {
+  content: "\e605";
 }
 
 .ydj-tiaojianshaixuan2:before {
